# joshgone-music

./: .gitignore  .markdownlint.json  404.html  README.md  __hatch  __pyproject  hatch.toml  index.html  joshgone.py  mkdocs.yml  notes.txt  online_sequencer_make_chunks.py  pyproject.toml  requirements-soundit.txt  requirements.txt  todo.md  yoyo.ini
additional/: index.html
basic/: index.html
dev/: index.html
docs/: _.md  additional.md  basic.md  dev.md  index.md  jgmusic.md  playlists.md  setup.md  todo.md
jgm/: __main__.py  joshgone.py  patched_player.py
jgm/extensions/: admin.py  advanced.py  chant.py  database.py  extra.py  filters.py  info.py  more.py  music.py  notes.txt  playlists.py  repl.py
jgmusic/: index.html
migrations/: 20230723_01_3Eccc-initial-tables.py
playlists/: index.html
search/: search_index.json
setup/: index.html
