[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "joshgone-music"
description = "JoshGone's Discord vc music playing features"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Kevin Wang", email = "59260907+Togohogo1@users.noreply.github.com" },
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/joshgone-music#readme"
Issues = "https://github.com/unknown/joshgone-music/issues"
Source = "https://github.com/unknown/joshgone-music"

[tool.hatch.version]
path = "jgm/__about__.py"

[tool.hatch.envs.default]
skip-install = true
dependencies = [
	"aiohttp==3.8.3",
	"aiosqlite==0.16.0",
	"av==10.0.0",
	"discord.py[voice]==2.1.0",
	"croniter==1.3.4",
	"httpx==0.22.0",
	"pure-protobuf==2.1.0",
	"python-dateutil==2.8.2",
	"setuptools==57.1.0",  # yoyo-migrations needs it but didn't declare it :/
	"simpleeval==0.9.10",
	"soundit==0.2.1",
	"yoyo-migrations==7.3.2",
	"yt-dlp==2023.02.17",
	# Pinned sub-dependencies
	"aiosignal==1.3.1",
	"anyio==3.5.0",
	"async-timeout==4.0.2",
	"attrs==20.3.0",
	"certifi==2021.10.8",
	"cffi==1.14.5",
	"chardet==3.0.4",
	"charset-normalizer==2.1.1",
	"frozenlist==1.3.3",
	"h11==0.12.0",
	"httpcore==0.14.7",
	"idna==3.1",
	"multidict==5.1.0",
	"mutagen==1.45.1",
	"pycparser==2.20",
	"pycryptodome==3.10.1",
	"PyNaCl==1.4.0",
	"rfc3986==1.5.0",
	"six==1.15.0",
	"sniffio==1.2.0",
	"sqlparse==0.4.1",
	"tabulate==0.8.7",
	"typing-extensions==4.0.0",
	"websockets==9.1",
	"yarl==1.6.3",
]
[tool.hatch.envs.default.scripts]
jgm = "python -m jgm"

[tool.hatch.envs.docs]
skip-install = true
dependencies = [
  "mkdocs-material==8.5.11"
]
[tool.hatch.envs.docs.scripts]
serve = "mkdocs serve"
